# image_filters_app

./: README.md
C++/: CMakeLists.txt  README.md
C++/src/: main.cpp
C++/src/core/: Image.cpp  Image.h
C++/src/filters/: BlurFilter.cpp  BlurFilter.h  BrightnessFilter.cpp  BrightnessFilter.h  ContrastFilter.cpp  ContrastFilter.h  Filter.cpp  Filter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  NegativeFilter.cpp  NegativeFilter.h  SharpenFilter.cpp  SharpenFilter.h
C++/src/gui/: FilterPanel.cpp  FilterPanel.h  ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  ToolBar.cpp  ToolBar.h
Java/: LICENSE  README.md  SETUP.md
Java/src/com/escomeditor/core/: Image.java
Java/src/com/escomeditor/filters/: BlurFilter.java  BrightnessFilter.java  ContrastFilter.java  Filter.java  GrayscaleFilter.java  NegativeFilter.java  SharpenFilter.java
Java/src/com/escomeditor/gui/: FilterPanel.java  MainWindow.java  ToolBar.java
Python/: .gitignore  README.md  main.py  requirements.txt
Python/src/: __init__.py
Python/src/core/: __init__.py  image.py
Python/src/filters/: __init__.py  base_filter.py  basic_filters.py
Python/src/gui/: __init__.py  filter_panel.py  image_view.py  main_window.py  toolbar.py
